# quantarena-clean

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
.github/: pull_request_template.md
.github/workflows/: ci.yml
backtest/: __init__.py  base_engine.py  behavior_metrics.py  behavioral_momentum_engine.py  benchmark_cache.py  data_loader.py  engine.py  execution.py  fof_allocator.py  fof_engine.py  fundamental_value_engine.py  macro_tactical_engine.py  mandate_interface.py  metrics.py  multi_personality_engine.py  portfolio_allocator.py  portfolio_tracker.py  providers.py  regenerate_comparison_report.py  report.py  report_metric_fallbacks.py  smart_beta_engine.py  workflow_adapter.py
backtest/workflow/: __init__.py  adapter.py  company_news_signature.py  db_store.py  decision_apply.py  decisions.py  phase1_artifact.py  phase1_pipeline.py  scoring.py  signal_cache.py  signal_collection.py
deepear/src/: main_flow.py
deepear/src/agents/: __init__.py  fin_agent.py  forecast_agent.py  intent_agent.py  report_agent.py  trend_agent.py
deepear/src/prompts/: __init__.py  fin_agent.py  forecast_analyst.py  isq_prompt_generator.py  trend_agent.py  (+1 more)
deepfund/src/: main.py
docs/: API.md  CLI.md  DEVELOPMENT.md  INSTALL.md  USAGE.md  index.html  refactor_program_plan.md  refactor_roadmap.md  reproduction.md
docs/assets/: site.css
quantarena/: __init__.py  artifacts.py  backtest_artifact_review.py  backtest_visualizer.py  benchmark_diagnostics.py  cache_health.py  cli.py  fixed_backtest_benchmark.py  fixed_backtest_cache_warmup.py  fixed_backtest_regression_gate.py  metrics_contract.py  news_diagnostics.py  news_replay_fixture_builder.py  provider_smoke.py  report_artifacts.py
runner/: __init__.py  _shim.py  bootstrap.py  cli.py  cli_support.py  config_discovery.py  env_validation.py  runtime_options.py
runner/modes/: __init__.py  backtest.py  deepear.py  deepfund.py  multi_personality.py  pipeline.py
scripts/: review_backtest_artifacts.py  run_cache_health.py  run_fixed_backtest_cache_warmup.py  run_fixed_backtest_regression_gate.py  run_fixed_backtest_week.py
shared/: __init__.py
shared/config/: README.md  __init__.py  llm_providers.py  loader.py  profile_registry.py  provider_routing.py  unified_config.yaml  validator.py
shared/db/: __init__.py  sqlite_pragmas.py
shared/utils/: __init__.py  macaron_responses.py  path_manager.py  run_id.py  time_utils.py
tests/: conftest.py  report_agent_harness.py  test_akshare_news_provider.py  test_alt_data_snapshots.py  test_apewisdom_provider.py  test_api_source_selection.py  test_artifact_validation.py  test_backtest_api_source_config.py  test_backtest_artifact_review.py  test_backtest_cached_state_usage.py  test_backtest_data_loader_api_source.py  test_backtest_engine_factory.py  test_backtest_fof_config_runtime.py  test_backtest_metrics.py  test_backtest_providers.py  test_backtest_visualizer.py  test_base_analyst.py  test_behavior_metrics.py  test_behavior_reporting.py  test_behavioral_momentum_engine.py  test_benchmark_cache.py  test_benchmark_reporting.py  test_broker_audit_report.py  test_cache_health.py  test_db_connection_cleanup.py  test_deepear_agents.py  test_deepear_db_concurrency.py  test_deepear_insider_tools.py  test_deepear_shared_import_spike.py  test_deepear_tools.py  test_deepear_workflow.py  test_deepseek_parallel.py  test_doubao_compatibility.py  test_doubao_parallel.py  test_env_validator.py  test_equal_weight_strategy.py  test_error_handler.py  test_execution_helper.py  test_experiment_universes.py  test_file_permission_check.py  (+70 more)
trading/: __init__.py  broker.py  live_readonly.py  order.py  order_store.py  paper_broker.py  paper_portfolio.py  reconciliation.py  risk.py
(+414 files in other folders)
