[project]
name = "quantarena"
version = "0.1.0"
description = "QuantArena live-market evaluation toolkit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core
    "pyyaml",
    "python-dotenv",
    "pandas",
    "numpy",
    "scipy>=1.10",
    "pydantic>=2.0",

    # LLM
    "langgraph",
    "langchain-openai",
    "langchain-anthropic",
    "langchain-deepseek",
    "langchain-ollama",
    "openai>=1.0.0",
    "ollama",

    # Data APIs
    "tushare",
    "yfinance",
    "requests",
    "akshare",

    # Database
    "supabase>=2.0.0",

    # Web/API
    "fastapi",
    "uvicorn",

    # Agents/Tools
    "agno",
    "loguru",
    "tavily-python",
    "ddgs",
    "baidusearch",
    # agno.tools.baidusearch imports pycountry at runtime but agno does not
    # declare it; without this pin fresh installs break (caught by CI).
    "pycountry",

    # Sentiment/ML
    "scikit-learn",
    "jieba",
    "rank-bm25",

    # Utilities
    "typing-extensions",
    "python-dateutil",
    "pyecharts",
    "matplotlib",
    "markdown",
]

[project.optional-dependencies]
ml = [
    "torch",
    "transformers",
    "sentence-transformers",
]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
]
full = [
    "quantarena[dev,ml]",
]

[project.scripts]
quantarena = "quantarena.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["deepear*", "deepfund*", "quantarena*", "shared*", "trading*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E402: the project's path-setup convention (shared.utils.path_manager
# setup_paths() before package imports) makes module-level imports after
# code endemic and intentional.
ignore = ["E402"]

[tool.ruff.lint.per-file-ignores]
# Vendored-style ML predictor uses star imports internally.
"deepear/src/utils/predictor/model/kronos.py" = ["F403", "F405"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "deepear/src", "deepfund/src", "shared"]
